--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "eslint-plugin-react": "^7.37.5",
     "lucide-react": "^0.564.0",
     "luxon": "^3.7.2",
+    "papaparse": "^5.5.3",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19.2.0",
     "react-day-picker": "^9.13.2",
     "react-dom": "^19.2.0",
