--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "eslint-plugin-react": "^7.37.5",
-    "html2canvas": "^1.4.1",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.564.0",
     "luxon": "^3.7.2",
     "papaparse": "^5.5.3",
