--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:server": "npm run dev --prefix server",
     "dev:all": "npm run dev",
     "build": "vite build",
+    "start": "node server/index.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
