--- a/package.json
+++ b/package.json
@@ -39,9 +39,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "eslint-plugin-react": "^7.37.5",
+    "express": "^4.21.2",
     "html-to-image": "^1.11.13",
+    "resend": "^4.1.2",
     "lucide-react": "^0.564.0",
     "luxon": "^3.7.2",
     "papaparse": "^5.5.3",
