--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
-VITE_API_URL=http://localhost:3001
+RESEND_API_KEY=re_7keWizRg_H5K5d9kdurAFJfBsRjZLEffH
+PORT=3001
